# PgSQL_Manager

./: .gitignore  CMakeLists.txt  README.md  REPORT.md
include/: Application.h  CommandFactory.h  Commands.h  DatabaseManager.h  Employee.h  ICommand.h  IDataGenerator.h  config.h.example
src/: Application.cpp  CommandFactory.cpp  Commands.cpp  DatabaseManager.cpp  Employee.cpp  IDataGenerator.cpp  main.cpp
